<?xml version="1.0" encoding="utf-8"?>
<tabs xmlns:app="http://schemas.android.com/apk/res-auto">
    <tab
        activeColor="@color/green_aro"
        barColorWhenSelected="#FFFFFF"
        icon="@drawable/ic_home_filled"
        id="@+id/tab_acueil"
        title="@string/accueil" />
    <tab
        activeColor="@color/green_aro"
        barColorWhenSelected="#FFFFFF"
        icon="@drawable/ic_guichet_filled"
        id="@+id/tab_guichet"
        title="@string/guichet" />
    <tab
        activeColor="@color/green_aro"
        barColorWhenSelected="#FFFFFF"
        icon="@drawable/ic_chat_filled"
        id="@+id/tab_ai"
        title="@string/bot" />
    <tab
        activeColor="@color/green_aro"
        barColorWhenSelected="#FFFFFF"
        icon="@drawable/ic_contrat_filled"
        id="@+id/tab_contrats"
        title="@string/contrat" />
    <tab
        activeColor="@color/green_aro"
        barColorWhenSelected="#FFFFFF"
        icon="@drawable/ic_settings_filled"
        id="@+id/tab_parametres"
        title="@string/parametre" />
</tabs>