<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="1"
    tools:context="com.aro.misaina.smartassurance.TabInfoSousAutoFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="0.05">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.05"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    style="@style/TextNormal"
                    android:layout_width="164dp"
                    android:layout_height="40dp"
                    android:gravity="fill_vertical"
                    android:text="@string/numero_police" />

                <TextView
                    android:id="@+id/vNopolice"
                    style="@style/TextNormal"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:gravity="fill_vertical"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.05"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    style="@style/TextNormal"
                    android:layout_width="154dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.05"
                    android:gravity="fill_vertical"
                    android:text="@string/date_souscription" />

                <TextView
                    android:id="@+id/vDateDebut"
                    style="@style/TextNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:gravity="fill_vertical" />
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="0.05">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:orientation="vertical"
            android:padding="10dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView14"
                style="@style/TextNormal"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="fill_vertical"
                android:text="Souscripteur" />

            <TextView
                android:id="@+id/vSouscripteur"
                style="@style/TextNormal"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="fill_vertical"
                android:text="TextView" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="0.05">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView11"
                style="@style/TextNormal"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:gravity="fill_vertical"
                android:text="@string/duree_contrat" />

            <TextView
                android:id="@+id/vDuree"
                style="@style/TextNormal"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="fill_vertical"
                android:text="TextView"
                android:textAlignment="textEnd" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="0.05">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.05"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView16"
                    style="@style/TextNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="0.56"
                    android:gravity="fill_vertical"
                    android:text="@string/prime_nette" />

                <TextView
                    android:id="@+id/vPrimeNet"
                    style="@style/TextNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:gravity="fill_vertical"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.05"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView57"
                    style="@style/TextNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:text="Taux d'enregistrement" />

                <TextView
                    android:id="@+id/textView49"
                    style="@style/TextNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:text="14,5 %"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.05"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView59"
                    style="@style/TextNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:text="T.V.A" />

                <TextView
                    android:id="@+id/textView58"
                    style="@style/TextNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:text="20 %"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.05"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView18"
                    style="@style/TextNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="0.77"
                    android:gravity="fill_vertical"
                    android:text="@string/prime_total" />

                <TextView
                    android:id="@+id/vPrimeTot"
                    style="@style/TextNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:gravity="fill_vertical"
                    android:text="TextView"
                    android:textAlignment="textEnd" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
