<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.aro.misaina.smartassurance.ProfilActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="101dp"
                android:layout_height="82dp"
                app:srcCompat="@drawable/ic_usercircle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nomUser"
                    style="@style/TextNormal"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/prenomUser"
                    style="@style/TextNormal"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="TextView" />
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView56"
                style="@style/TextTitle"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/identification" />

            <TextView
                android:id="@+id/cin"
                style="@style/TextNormal"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/dateNaiss"
                style="@style/TextNormal"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/lieuNaiss"
                style="@style/TextNormal"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/profession"
                style="@style/TextNormal"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="TextView" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView60"
                style="@style/TextTitle"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/coordonnees" />

            <TextView
                android:id="@+id/email"
                style="@style/TextNormal"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/tel"
                style="@style/TextNormal"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/adresse"
                style="@style/TextNormal"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="TextView" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView60"
                style="@style/TextTitle"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/information_client" />

            <TextView
                android:id="@+id/noclient"
                style="@style/TextNormal"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/datesouscription"
                style="@style/TextNormal"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="TextView" />

        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>
